syntax = "proto3";

option csharp_namespace = "grpc.server";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc GetMyData (GetMyDataRequest) returns (GetMyDataReply);
}

// message想像成是 class
// The request message containing the user's name.
message HelloRequest {
  string name = 1; // 數字表示參數順序
  string age = 2;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
  string result = 2;
}

message GetMyDataRequest {
  string idno = 1;
  string carno = 2;
}

message GetMyDataReply {
  string address = 1;
  string cartype = 2;
}